--- a/content/pages/rules/emails/117/index.adoc
+++ b/content/pages/rules/emails/117/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/117/
 :category: emails
 :description: This requirement establishes the importance of avoiding the interpretation and execution of HTML code in business emails.
-:keywords: HTML, Email, Business, Security, Requirement, Code injection, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: HTML, Email, Business, Security, Requirement, Code injection, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R117. Do not interpret HTML code
@@ -17,14 +17,20 @@ must not display *HTML* code by default.
 
 == References
 
-. [[r1]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top 10 A1:2017-Injection].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/80.html[CWE-80: Improper Neutralization of Script-Related HTML Tags in a Web Page].
+The software receives input from an upstream component,
+but it does not neutralize or incorrectly neutralizes special characters such
+as "<", ">", and "&" that could be interpreted as web-scripting elements when
+they are sent to a downstream component that processes web pages.
+
+. [[r2]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top 10 A1:2017-Injection].
 Injection flaws, such as **SQL**, **NoSQL**, **OS**, and *LDAP* injection,
 occur when untrusted data is sent to an interpreter as part of a command or
 query.
 The attacker's hostile data can trick the interpreter into executing unintended
 commands or accessing data without proper authorization.
 
-. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.1]
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.1]
 Address common coding vulnerabilities in software-development processes such as
 injection flaws, particularly *SQL* injection.
 Also consider *OS* Command Injection, *LDAP* and *XPath* injection flaws as
