--- a/content/pages/rules/services/265/index.adoc
+++ b/content/pages/rules/services/265/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/265/
 :category: services
 :description: This requirement establishes the importance of restricting access to critical business processes, allowing only authorized users.
-:keywords: Users, Autorization, Critical Process, NIST, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Users, Autorization, Critical Process, NIST, ASVS, CAPEC, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R265. Restrict access to critical processes
@@ -31,72 +31,76 @@ authenticated users with roles with enough privileges.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/269.html[CWE-269: Improper Privilege Management]
+. [[r1]] link:http://capec.mitre.org/data/definitions/13.html[CAPEC-13: Subverting Environment Variable Values].
+The attacker directly or indirectly modifies environment variables used by or
+controlling the target software.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/269.html[CWE-269: Improper Privilege Management]
 The software does not properly assign, modify, track, or check privileges for
 an actor,
 creating an unintended sphere of control for that actor.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/284.html[CWE-284: Improper Access Control]
+. [[r3]] link:https://cwe.mitre.org/data/definitions/284.html[CWE-284: Improper Access Control]
 The software does not restrict or incorrectly restricts access to a resource
 from an unauthorized actor.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/285.html[CWE-285: Improper Authorization]
+. [[r4]] link:https://cwe.mitre.org/data/definitions/285.html[CWE-285: Improper Authorization]
 The software does not perform or incorrectly performs an authorization check
 when an actor attempts to access a resource or perform an action.
 
-. [[r4]] link:https://cwe.mitre.org/data/definitions/287.html[CWE-287: Improper Authentication]
+. [[r5]] link:https://cwe.mitre.org/data/definitions/287.html[CWE-287: Improper Authentication]
 When an actor claims to have a given identity,
 the software does not prove or insufficiently proves that the claim is correct.
 
-. [[r5]] link:https://cwe.mitre.org/data/definitions/306.html[CWE-306: Missing Authentication for Critical Function]
+. [[r6]] link:https://cwe.mitre.org/data/definitions/306.html[CWE-306: Missing Authentication for Critical Function]
 The software does not perform any authentication for functionality that
 requires a provable user identity or consumes a significant amount of
 resources.
 
-. [[r6]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
+. [[r7]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
 Art. 4: Security of processing.(1a)]
 The measures referred to in paragraph 1 shall at least ensure that personal
 data can be accessed only by authorized personnel for legally authorized
 purposes.
 
-. [[r7]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-2[NIST 800-53 IA-2]
+. [[r8]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-2[NIST 800-53 IA-2]
 Identification and authentication:
 The information system uniquely identifies and authenticates
 organizational users (or processes acting on behalf of organizational users).
 
-. [[r8]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
+. [[r9]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
 Restrictions on what authenticated users are allowed to do are often not
 properly enforced.
 Attackers can exploit these flaws to access unauthorized functionality and/or
 data, such as access other users' accounts, view sensitive files,
 modify other users' data, change access rights, etc.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.4 Access Control Architectural Requirements.(1.4.3)]
 Verify enforcement of the principle of least privilege in functions, data
 files, URLs, controllers, services, and other resources.
 This implies protection against spoofing and elevation of privilege.
 
-. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.4 Access Control Architectural Requirements.(1.4.4)]
 Verify the application uses a single and well-vetted access control mechanism
 for accessing protected data and resources.
 All requests must pass through this single mechanism to avoid copy and paste or
 insecure alternative paths.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.4 Access Control Architectural Requirements.(1.4.5)]
 Verify that attribute or feature-based access control is used whereby the code
 checks the user's authorization for a feature/data item rather than just their
 role.
 Permissions should still be allocated using roles.
 
-. [[r12]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+. [[r13]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
 Address common coding vulnerabilities in software-development processes
 including improper access control
 (such as insecure direct object references, failure to restrict URL access,
 directory traversal, and failure to restrict user access to functions).
 
-. [[r13]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.7]
+. [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.7]
 Restrict access to any database so that only database administrators have the
 ability to directly access or query databases.
