--- a/content/pages/rules/authentication/328/index.adoc
+++ b/content/pages/rules/authentication/328/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/328/
 :category: authentication
 :description: This requirement states that multi-factor authentication (MFA) must be enabled and required to access critical systems.
-:keywords: MFA, Authentication, Multi, Factor, ASVS, CWE, NERC, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: MFA, Authentication, Multi, Factor, ASVS, CAPEC, CWE, NERC, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R328. Request MFA for critical systems
@@ -26,92 +26,98 @@ the protection offered by multi-factor authentication (*MFA*).
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/287.html[CWE-287: Improper Authentication]
+. [[r1]] link:http://capec.mitre.org/data/definitions/16.html[CAPEC-16: Dictionary-based Password Attack].
+An attacker tries each of the words in a dictionary as passwords to gain access
+to the system via some user's account.
+If the password chosen by the user was a word within the dictionary,
+this attack will be successful (in the absence of other mitigations).
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/287.html[CWE-287: Improper Authentication]
 When an actor claims to have a given identity,
 the software does not prove or insufficiently proves that the claim is correct.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/304.html[CWE-304: Missing Critical Step in Authentication]
+. [[r3]] link:https://cwe.mitre.org/data/definitions/304.html[CWE-304: Missing Critical Step in Authentication]
 The software implements an authentication technique,
 but it skips a step that weakens the technique.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/308.html[CWE-308: Use of Single-factor Authentication]
+. [[r4]] link:https://cwe.mitre.org/data/definitions/308.html[CWE-308: Use of Single-factor Authentication]
 The use of single-factor authentication can lead to unnecessary risk of
 compromise when compared with the benefits of a dual-factor authentication
 scheme.
 
-. [[r4]] link:https://cwe.mitre.org/data/definitions/419.html[CWE-419: Unprotected Primary Channel]
+. [[r5]] link:https://cwe.mitre.org/data/definitions/419.html[CWE-419: Unprotected Primary Channel]
 The software uses a primary channel for administration or restricted
 functionality,
 but it does not properly protect the channel.
 
-. [[r5]] link:https://cwe.mitre.org/data/definitions/654.html[CWE-654: Reliance on a Single Factor in a Security Decision]
+. [[r6]] link:https://cwe.mitre.org/data/definitions/654.html[CWE-654: Reliance on a Single Factor in a Security Decision]
 A protection mechanism relies exclusively, or to a large extent, on the
 evaluation of a single condition or the integrity of a single object or entity
 in order to make a decision about granting access to restricted resources or
 functionality.
 
-. [[r6]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-005-5.pdf[NERC CIP-005-5. B. Requirements and measures. R2.3]
+. [[r7]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-005-5.pdf[NERC CIP-005-5. B. Requirements and measures. R2.3]
 Require multi-factor authentication for all Interactive Remote Access sessions.
 
-. [[r7]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r8]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
-. [[r8]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
+. [[r9]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
 Restrictions on what authenticated users are allowed to do are often not
 properly enforced.
 Attackers can exploit these flaws to access unauthorized functionality and/or
 data, such as access other users' accounts, view sensitive files,
 modify other users' data, change access rights, etc.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.2 Authentication Architectural Requirements.(1.2.4)]
 Verify that all authentication pathways and identity management APIs implement
 consistent authentication security control strength,
 such that there are no weaker alternatives per the risk of the application.
 
-. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.4)]
 Verify impersonation resistance against phishing,
 such as the use of multi-factor authentication, cryptographic devices with
 intent (such as connected keys with a push to authenticate),
 or at higher AAL levels, client-side certificates.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.7)]
 Verify intent to authenticate by requiring the entry of an *OTP* token or
 user-initiated action such as a button press on a *FIDO* hardware key.
 
-. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.3 Other Access Control Considerations.(4.3.1)]
 Verify administrative interfaces use appropriate multi-factor authentication to
 prevent unauthorized use.
 
-. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r14]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.3 Other Access Control Considerations.(4.3.3)]
 Verify the application has additional authorization
 (such as step up or adaptive authentication) for lower value systems,
 and/or segregation of duties for high value applications to enforce anti-fraud
 controls as per the risk of application and past fraud.
 
-. [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
 Address common coding vulnerabilities in software-development processes
 including improper access control
 (such as insecure direct object references, failure to restrict URL access,
 directory traversal, and failure to restrict user access to functions).
 
-. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+. [[r16]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
 
-. [[r16]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.3.1]
+. [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.3.1]
 Incorporate multi-factor authentication for all non-console access into the
 CDE (Cardholder Data Environment) for personnel with administrative access.
 
-. [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.3.2]
+. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.3.2]
 Incorporate multi-factor authentication for all remote network access
 (both user and administrator, and including third-party access for support or
 maintenance)
