--- a/content/pages/rules/credentials/332/index.adoc
+++ b/content/pages/rules/credentials/332/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/332/
 :category: credentials
 :description: This requirement establishes the importance of checking new passwords against a set of breached passwords.
-:keywords: Breached, Leaked, Password, Account, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Breached, Leaked, Password, Account, ASVS, CAPEC, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R332. Prevent the use of breached passwords
@@ -25,28 +25,34 @@ them.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
+. [[r1]] link:http://capec.mitre.org/data/definitions/16.html[CAPEC-16: Dictionary-based Password Attack].
+An attacker tries each of the words in a dictionary as passwords to gain access
+to the system via some user's account.
+If the password chosen by the user was a word within the dictionary,
+this attack will be successful (in the absence of other mitigations).
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
 The product does not require that users should have strong passwords,
 which makes it easier for attackers to compromise user accounts.
 
-. [[r2]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
+. [[r3]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
 Verifiers SHALL compare the prospective secrets against a list that contains
 values known to be commonly-used, expected, or compromised.
 
-. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.7)]
 Verify that passwords submitted during account registration, login, and
 password change are checked against a set of breached passwords either locally
 or using an external API.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.1)]
 Verify that anti-automation controls are effective at mitigating breached
 credential testing, brute force, and account lockout attacks.
@@ -58,6 +64,6 @@ recent attempts to unlock the account, or similar.
 Verify that no more than 100 failed attempts per hour is possible on a single
 account.
 
-. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
